# mto-webserver

./: .env  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yaml  init.sql
entity/: Cargo.toml  lib.rs  prelude.rs  request.rs  user.rs
entity/src/: prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231129_132637_create_tables.rs
model/: Cargo.toml
model/src/: httpbin.rs  lib.rs
model/src/entity/: mod.rs  request.rs  user.rs
scripts/: init.sql
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/auth/: basic.rs  mod.rs
service/src/crud/: request.rs
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/api/: mod.rs  routes.rs
src/api/httpbin_request/: controller.rs  crud.rs  mod.rs
src/api/request/: controller.rs  dto.rs  mod.rs  service.rs
src/db/: connect.rs  connection.rs  mod.rs
src/db/entities/: httpbin_request.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
src/service/: httpbin.rs  mod.rs
src/utils/: httpbin.rs
