[package]
name = "mto-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["sync", "rt-multi-thread", "macros"]}
actix-web = "4.4.0"
sea-orm = { version = "0.12.7", features = [ "sqlx-mysql", "runtime-tokio-native-tls"] }
log = "0.4.20"
env_logger = "0.10.1"
serde = "1.0.193"
serde_yaml = "0.9.27"
once_cell = "1.18.0"