[package]
name = "mto-webserver"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "service", "migration"]


[dependencies]
tokio = { version = "1.34.0", features = ["sync", "rt-multi-thread", "macros"]}
actix-web = "4.4.0"
sea-orm = { version = "0.12.7", features = [ "sqlx-mysql", "runtime-tokio-native-tls"] }
log = "0.4.20"
env_logger = "0.10.1"
serde = "1.0.193"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
once_cell = "1.18.0"
rand = "0.8.5" 
reqwest = { version = "0.11.22", features = ["json"] }
futures-util = "0.3.29"