[package]
name = "mto-webserver"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]


[dependencies]
mto-migration = { path = "./migration" }
mto-entity = { path = "./entity"}
tokio = { version = "1.34.0", features = ["sync", "rt-multi-thread", "macros"]}
actix-web = "4.4.0"
sea-orm = { version = "0.12.7", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "mock"] }
log = "0.4.20"
env_logger = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.18.0"
rand = "0.8.5" 
reqwest = { version = "0.11.22", features = ["json"] }
futures-util = "0.3.29"
dotenv = "0.15.0"
config = "0.13.4"