[package]
name = "mto-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mto-model = { path = "../model"}
sea-orm = { version = "0.12.7", features = ["mock"] }
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"


[dev-dependencies]
tokio = { version = "1.34.0", features = ["sync", "rt-multi-thread", "macros"]}
